# NewsLetterService/src/modules/relatorio/dtos/CreateRelatorioDTO.ts
@@ -1,0 +1,13 @@
+export enum PeriodicidadeEnum {
+    SEMANAL = 'semanal',
+    QUINZENAL = 'quinzenal',
+    MENSAL = 'mensal',
+    SEMESTRAL = 'semestral',
+  }
+
+
+export interface CreateRelatorioDTO {
+    tipo: PeriodicidadeEnum,
+    titulo: string,
+    conteudo: string
+  }
