# NewsLetterService/src/routes/inscricao.routes.ts
@@ -2,18 +2,20 @@ import { Router } from "express";
 import { CreateInscricaoController } from "../modules/Inscricao/useCases/createInscricao/CreateInscricaoController";
 import { GetInscricaoController } from "../modules/Inscricao/useCases/getInscricao/GetInscricaoController";
 import { DesativarInscricaoController } from "../modules/Inscricao/useCases/updateInscricao/DesativarInscricaoController";
-import { ValidaIncricaoUseCase } from "../modules/Inscricao/useCases/validaInscricao/ValidaInscricaoUseCase";
 import { ValidaInscricaoController } from "../modules/Inscricao/useCases/validaInscricao/ValidaInscricaoController";
+import { GetInscricaoByTypeController } from "../modules/Inscricao/useCases/getInscricao/GetInscricaoByTypeController";
 
 const createInscricao = new CreateInscricaoController();
 const getInscricao = new GetInscricaoController();
 const desativarInscricao = new DesativarInscricaoController();
 const validaInscricao = new ValidaInscricaoController();
+const getInscricaoByTypeController = new GetInscricaoByTypeController();
 
 const inscricaoRoutes = Router();
 
 inscricaoRoutes.post("/", createInscricao.handle);
 inscricaoRoutes.get("/", getInscricao.handle);
+inscricaoRoutes.get("/periodicidade", getInscricaoByTypeController.handle);
 inscricaoRoutes.put("/desativar", desativarInscricao.handle);
 inscricaoRoutes.post("/login", validaInscricao.handle);
 
